--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,155 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="http://localhost:8080/" method="post">
+      <fieldset>
+        <legend>Personal information</legend>
+        <label>
+          Surname:
+          <input
+            type="text"
+            name="Surname"
+            autocomplete="off"
+          >
+        </label>
+
+        <label>
+          Name:
+          <input
+            type="text"
+            name="Name"
+            autocomplete="off"
+          >
+        </label>
+
+        <label>
+          How old are You?
+          <input
+            type="number"
+            name="Age"
+            min="1"
+            max="100"
+            value="12"
+          >
+        </label>
+
+        <label>
+          Full date of birth:
+          <input
+            type="date"
+            name="Date"
+          >
+        </label>
+
+        <label>
+          I accept the term of the agreement
+          <input
+            type="checkbox"
+            name="Agreement"
+            required
+          >
+        </label>
+
+
+
+      </fieldset>
+
+      <fieldset>
+        <legend>Registration</legend>
+        <label>
+          E-mail:
+          <input
+            type="email"
+            name="Email"
+            placeholder="email@example.com"
+            required
+          >
+        </label>
+
+        <label>
+          Password:
+          <input
+            type="password"
+            name="Password"
+            minlength="5"
+            maxlength="32"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+        <label>
+          Do you love cats?
+          <input
+            type="radio"
+            name="YesOrNo"
+          >
+          Yes
+          <input
+            type="radio"
+            name="YesOrNo"
+          >
+          No
+        </label>
+
+        <label>
+          What is your favorite color?
+          <input
+            type="color"
+            name="Color"
+          >
+        </label>
+
+        <label>
+          What time do you go to bed?
+          <input
+            type="time"
+            name="TimeToSleep"
+          >
+        </label>
+
+        <label>
+          What are your favorite brand of cars?
+          <select name="Car" multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+            <option value=" " disabled></option>
+          </select>
+        </label>
+
+        <label>
+          How do you rate our work?
+          <input
+            type="range"
+            name="Range"
+            value="0"
+          >
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>Additional info</legend>
+        <label>
+          Comments:
+          <textarea
+            name="Comments"
+          >
+          </textarea>
+        </label>
+
+        <label>
+          Would you recommend us?
+          <select name="Recommend">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
