--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     <script type="text/javascript" src="./main.js"></script>
-    <form action="http://localhost:8080/" method="post">
-      <fieldset>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="fieldSet">
         <legend>Personal information</legend>
-        <label>
+        <label class="container">
           Surname:
           <input
             type="text"
@@ -24,7 +24,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           Name:
           <input
             type="text"
@@ -33,7 +33,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           How old are You?
           <input
             type="number"
@@ -44,7 +44,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           Full date of birth:
           <input
             type="date"
@@ -52,7 +52,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           I accept the term of the agreement
           <input
             type="checkbox"
@@ -65,9 +65,9 @@
 
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldSet">
         <legend>Registration</legend>
-        <label>
+        <label class="container">
           E-mail:
           <input
             type="email"
@@ -77,7 +77,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           Password:
           <input
             type="password"
@@ -89,9 +89,9 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldSet">
         <legend>An interesting fact about you!</legend>
-        <label>
+        <label class="container">
           Do you love cats?
           <input
             type="radio"
@@ -105,7 +105,7 @@
           No
         </label>
 
-        <label>
+        <label class="container">
           What is your favorite color?
           <input
             type="color"
@@ -113,7 +113,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           What time do you go to bed?
           <input
             type="time"
@@ -121,7 +121,7 @@
           >
         </label>
 
-        <label>
+        <label class="container">
           What are your favorite brand of cars?
           <select name="Car" multiple>
             <option value="BMW">BMW</option>
@@ -131,7 +131,7 @@
           </select>
         </label>
 
-        <label>
+        <label class="container">
           How do you rate our work?
           <input
             type="range"
@@ -141,9 +141,9 @@
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldSet">
         <legend>Additional info</legend>
-        <label>
+        <label class="container">
           Comments:
           <textarea
             name="Comments"
@@ -151,7 +151,7 @@
           </textarea>
         </label>
 
-        <label>
+        <label class="container">
           Would you recommend us?
           <select name="Recommend">
             <option value="Yes">Yes</option>
@@ -159,6 +159,7 @@
           </select>
         </label>
       </fieldset>
+
       <button type="submit">Submit</button>
     </form>
   </body>
