--- a/src/index.html
+++ b/src/index.html
@@ -98,16 +98,17 @@
               type="radio"
               name="YesOrNo"
               value="yes">
-            yes
+            Yes
           </label>
           <label>
             <input
               type="radio"
-              name="YesOfNo"
+              name="YesOrNo"
               value="no">
-            no
+            No
           </label>
         </div>
+
 
         <label class="container">
           What is your favorite color?
